# zmp-bot

./: .rustfmt.toml  Cargo.toml  README.md  Secrets.toml  accounts.db
src/: discord.rs  error.rs  main.rs  minecraft.rs
src/commands/: account.rs  accountv2.rs  bots.rs  command_helper.rs  helpstart.rs  lfg.rs  mod.rs  round.rs  xd.rs
src/commands/zombies/: gear.rs  mod.rs  rounds.rs  zombies.rs
src/data/: helpstart_api.rs  mod.rs  mojang.rs
src/discord/commands/: bots.rs  command_helper.rs  helpstart.rs  lfg.rs  xd.rs
src/handlers/: bot_interaction.rs  message.rs  mod.rs  thread.rs
y/: Cargo.toml
