[package]
name = "zmp-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
serenity = { version = "0.12.4", default-features = false,  features = ["client", "gateway", "model", "rustls_backend", "utils", "framework"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "rt"] }
env_logger = "0.11.3"
anyhow = "1.0.93"
tracing = "0.1.41"
regex = "1.11.1"
sqlx = { version = "0.8.2", features = ["sqlite", "sqlx-sqlite", "runtime-tokio"]}
serde = { version = "1.0.215", features = ["derive"] }
reqwest = { version = "0.12.9" }
serde_json = { version = "1.0.132" }